Fixed body overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 
 :root {
-  font-family: 'Special Elite', cursive;
+  font-family: "Special Elite", cursive;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -12,8 +12,17 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --gray-dark: #aaaaaa3f;
+  --gray-dark: #aaaaaa82;
   --gray-medium: #aaaaaa;
   --gray-light: #ddd;
   --gray-opaque: rgba(229, 229, 229, 0.6);
+}
+
+html,
+body {
+  overflow: clip;
+}
+body {
+  padding: 0;
+  margin: 0;
 }
